--- a/index.css
+++ b/index.css
@@ -17,8 +17,13 @@
 header {
   width: 100%;
   justify-content: center;
-  padding: 40px 0px;
+  padding: 40px 0px 15px;
   margin: auto;
+  border-bottom: 2px solid lightgray;
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  z-index: 999;
 }
 
 .logo-desktop {
@@ -78,7 +83,8 @@ header,
   justify-content: center;
   gap: 50px;
   margin-bottom: 10px;
-  font-size: 15px;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .border {
@@ -179,4 +185,104 @@ header,
 
 .head-button-3:hover {
   box-shadow: 0px 3px 5px 0px rgb(193, 190, 190);
+}
+
+.scroll-options {
+  display: flex;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.content-wrapper {
+  display: flex;
+  gap: 15px;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  white-space: nowrap;
+  padding: 10px;
+  margin: 0px auto;
+}
+
+.content-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+.category {
+  flex: 0 0 auto;
+  padding: 10px 20px;
+  background: #eee;
+  border-radius: 20px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.show-map {
+  color: white;
+  background-color: black;
+  padding: 10px;
+  border-radius: 50px;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  position: fixed;
+  z-index: 990;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.show-map img {
+  width: 25px;
+}
+
+.hotel-options {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 10px 40px;
+  justify-content: space-around;
+}
+
+.hotel {
+  width: 300px;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.hotel-img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.hotel-rating {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5px 0px;
+}
+
+.hotel-rating h3 {
+  font-size: 18px;
+}
+
+.hotel-rating img {
+  width: 15px;
+}
+
+.info {
+  color: rgb(61, 61, 61);
+}
+
+.underline {
+  font-weight: 600;
+  text-decoration: underline;
+  color: black;
 }
