--- a/index.css
+++ b/index.css
@@ -85,6 +85,26 @@ header,
   margin-bottom: 10px;
   font-size: 18px;
   font-weight: 600;
+
+  transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+/* classes to add or remove in header */
+
+.onscroll .nav-pages {
+  display: none;
+}
+
+.onscroll .tab-view {
+  display: none;
+}
+
+.backontop .nav-pages {
+  display: block;
+}
+
+.backontop .tab-view {
+  display: block;
 }
 
 .border {
@@ -212,7 +232,7 @@ header,
 .category {
   flex: 0 0 auto;
   padding: 10px 20px;
-  background: #eee;
+  background: #dfdfdf;
   border-radius: 20px;
   cursor: pointer;
   user-select: none;
@@ -221,7 +241,7 @@ header,
 .show-map {
   color: white;
   background-color: black;
-  padding: 10px;
+  padding: 10px 20px;
   border-radius: 50px;
   font-size: 16px;
   font-weight: 600;
@@ -231,9 +251,10 @@ header,
   gap: 5px;
   position: fixed;
   z-index: 990;
-  bottom: 20px;
+  bottom: 50px;
   left: 50%;
   transform: translateX(-50%);
+  transition: transform 0.5s ease, opacity 0.5s ease;
 }
 
 .show-map img {
@@ -245,11 +266,13 @@ header,
   flex-wrap: wrap;
   gap: 20px;
   padding: 10px 40px;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  max-width: 1500px;
+  margin: 0px auto;
 }
 
 .hotel {
-  width: 300px;
+  width: clamp(250px, 30vw, 320px);
   border: 2px solid lightgray;
   border-radius: 10px;
   padding: 10px;
@@ -257,7 +280,7 @@ header,
 
 .hotel-img {
   width: 100%;
-  height: 280px;
+  height: clamp(180px, 25vw, 280px);
   object-fit: cover;
   border-radius: 10px;
 }
@@ -270,11 +293,12 @@ header,
 }
 
 .hotel-rating h3 {
-  font-size: 18px;
+  font-size: clamp(15px, 2vw, 18px);
 }
 
 .hotel-rating img {
-  width: 15px;
+  width: clamp(12px, 3vw, 15px);
+  margin-bottom: -1px;
 }
 
 .info {
@@ -285,4 +309,91 @@ header,
   font-weight: 600;
   text-decoration: underline;
   color: black;
+}
+
+.call-to-action {
+  margin: 25px auto;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.call-to-action button {
+  color: white;
+  background-color: black;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+}
+
+.quick-links {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1100px;
+  margin: 50px auto;
+  gap: 20px;
+  padding: 20px;
+  font-size: clamp(14px, 2vw, 16px);
+}
+
+.footer-sect {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.testimony {
+  display: flex;
+  max-width: 1100px;
+  justify-content: space-between;
+  margin: 10px auto;
+  padding: 20px;
+}
+
+.on-small-screen {
+  display: none;
+}
+
+.documents {
+  display: flex;
+  gap: 10px;
+  transition: all 0.2s ease;
+}
+
+.documents p:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.socials {
+  gap: 15px;
+}
+
+.socials img {
+  height: 30px;
+  cursor: pointer;
+}
+
+/* disappearing button class */
+.disappear {
+  transform: translateY(30px) translateX(-50%);
+  opacity: 0;
+  z-index: -100;
+}
+
+.appear {
+  transform: translateY(-30px) translateX(-50%);
+  opacity: 1;
+  z-index: 800;
+}
+
+/* mobile navigation */
+
+.mobile-nav {
+  display: none;
 }
