--- a/media-query.css
+++ b/media-query.css
@@ -1,7 +1,6 @@
 /* MOBILE VIEW */
 @media (max-width: 744px) {
   header {
-    padding: 10px;
     width: 100%;
     border: none;
   }
@@ -74,8 +73,95 @@
   .head-button-3 img {
     width: 18px;
   }
+
+  .hotel-options {
+    gap: 20px;
+  }
+
+  .hotel {
+    width: 200px;
+  }
+
+  .hotel-img {
+    height: 180px;
+  }
+
+  .hotel-rating {
+    font-size: 15px;
+  }
+
+  .info {
+    font-size: 14px;
+  }
 }
 
-/* LAPTOP VIEW */
-@media (min-width: 950px) {
+@media (max-width: 646px) {
+  .hotel {
+    width: 100%;
+    font-size: clamp(12px, 3vw, 16px);
+  }
+
+  .hotel h3 {
+    font-size: clamp(13px, 3vw, 18px);
+  }
+
+  .hotel-img {
+    height: 65vw;
+  }
+
+  .quick-links {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .footer-sect {
+    padding: 0px 20px 10px 20px;
+    border-bottom: 2px solid lightgray;
+  }
+
+  .on-small-screen {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .on-desktop {
+    display: none;
+  }
+
+  .testimony,
+  .documents {
+    flex-direction: column;
+    padding-bottom: 25px;
+  }
+
+  .documents:hover {
+    text-decoration: none;
+  }
+
+  .mobile-nav {
+    display: block;
+    background-color: white;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 30px;
+    padding: 5px;
+    box-shadow: 0px 0px 5px 0px gray;
+  }
+
+  .navigation {
+    width: 50px;
+    background-color: white;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 10px;
+    justify-content: center;
+  }
+
+  .navigation img {
+    width: 100%;
+  }
 }
