--- a/index.css
+++ b/index.css
@@ -1,16 +1,10 @@
-/* font reference */
 
-.inter-font {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
 
 * {
   margin: 0;
   padding: 0;
   font-family: "Inter", sans-serif;
+  cursor: pointer;
 }
 
 /* header */
