--- a/media-query.css
+++ b/media-query.css
@@ -148,6 +148,8 @@
     gap: 30px;
     padding: 5px;
     box-shadow: 0px 0px 5px 0px gray;
+    position: sticky;
+    bottom: 0;
   }
 
   .navigation {
